Improve mobile layouts across site

--- a/shop.html
+++ b/shop.html
@@ -48,77 +48,71 @@
         </div>
 
         <div class="shop-grid">
-          <a class="product-card" data-category="meditation" href="https://example.com/program/meditation" target="_blank" rel="noopener noreferrer">
-            <figure class="product-card__media">
-              <img src="assets/img/유리온실2.jpg" alt="정규 명상 수업 상품 이미지" loading="lazy">
+          <div class="product-card" data-category="meditation">
+            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
+              <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">제품 이름</h3>
-              <p class="product-card__description">설명</p>
-              <p class="product-card__price">25,000원</p>
-              <span class="product-card__cta">구매</span>
+              <h3 class="product-card__title">상품 준비 중</h3>
+              <p class="product-card__description">명상 프로그램을 닮은 상품을 준비하고 있습니다. 곧 안내드릴게요.</p>
+              <p class="product-card__price">가격 미정</p>
             </div>
-          </a>
+          </div>
 
-          <a class="product-card" data-category="meditation" href="https://example.com/program/forest" target="_blank" rel="noopener noreferrer">
-            <figure class="product-card__media">
-              <img src="assets/img/유리온실.jpg" alt="숲 명상 체험 상품 이미지" loading="lazy">
+          <div class="product-card" data-category="meditation">
+            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
+              <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">제품 이름</h3>
-              <p class="product-card__description">설명</p>
-              <p class="product-card__price">25,000원</p>
-              <span class="product-card__cta">구매</span>
+              <h3 class="product-card__title">상품 준비 중</h3>
+              <p class="product-card__description">숲 명상에서 영감을 받은 새로운 굿즈를 제작 중입니다.</p>
+              <p class="product-card__price">가격 미정</p>
             </div>
-          </a>
+          </div>
 
-          <a class="product-card" data-category="gardening" href="https://example.com/program/floral" target="_blank" rel="noopener noreferrer">
-            <figure class="product-card__media">
-              <img src="assets/img/가든센터.jpg" alt="플라워 클래스 상품 이미지" loading="lazy">
+          <div class="product-card" data-category="gardening">
+            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
+              <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">제품 이름</h3>
-              <p class="product-card__description">설명</p>
-              <p class="product-card__price">25,000원</p>
-              <span class="product-card__cta">구매</span>
+              <h3 class="product-card__title">상품 준비 중</h3>
+              <p class="product-card__description">가시림의 식물과 함께할 가드닝 키트를 준비하고 있습니다.</p>
+              <p class="product-card__price">가격 미정</p>
             </div>
-          </a>
+          </div>
 
-          <a class="product-card" data-category="tea" href="https://example.com/product/tea" target="_blank" rel="noopener noreferrer">
-            <figure class="product-card__media">
-              <img src="assets/img/카페.jpg" alt="허브 티 세트 상품 이미지" loading="lazy">
+          <div class="product-card" data-category="tea">
+            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
+              <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">제품 이름</h3>
-              <p class="product-card__description">설명</p>
-              <p class="product-card__price">25,000원</p>
-              <span class="product-card__cta">구매</span>
+              <h3 class="product-card__title">상품 준비 중</h3>
+              <p class="product-card__description">동백과 허브 블렌딩 티를 새롭게 선보일 예정입니다.</p>
+              <p class="product-card__price">가격 미정</p>
             </div>
-          </a>
+          </div>
 
-          <a class="product-card" data-category="gardening" href="https://example.com/program/workshop" target="_blank" rel="noopener noreferrer">
-            <figure class="product-card__media">
-              <img src="assets/img/유리온실2.jpg" alt="식물 번식 워크숍 상품 이미지" loading="lazy">
+          <div class="product-card" data-category="gardening">
+            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
+              <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">제품 이름</h3>
-              <p class="product-card__description">설명</p>
-              <p class="product-card__price">25,000원</p>
-              <span class="product-card__cta">구매</span>
+              <h3 class="product-card__title">상품 준비 중</h3>
+              <p class="product-card__description">새로운 워크숍 키트를 정성껏 준비하고 있습니다.</p>
+              <p class="product-card__price">가격 미정</p>
             </div>
-          </a>
+          </div>
 
-          <a class="product-card" data-category="tea" href="https://example.com/product/mist" target="_blank" rel="noopener noreferrer">
-            <figure class="product-card__media">
-              <img src="assets/img/main.jpg" alt="가시림 시그니처 룸 미스트 상품 이미지" loading="lazy">
+          <div class="product-card" data-category="tea">
+            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
+              <span>상품 준비 중</span>
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">제품 이름</h3>
-              <p class="product-card__description">설명</p>
-              <p class="product-card__price">25,000원</p>
-              <span class="product-card__cta">구매</span>
+              <h3 class="product-card__title">상품 준비 중</h3>
+              <p class="product-card__description">공간을 채울 향 제품을 준비 중입니다. 조금만 기다려 주세요.</p>
+              <p class="product-card__price">가격 미정</p>
             </div>
-          </a>
+          </div>
         </div>
       </section>
     </main>
