--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- 가시림 소개 -->
     <section class="body-container body-container--stacked" aria-labelledby="intro-heading">
-      <div class="intro-hero reveal parallax from-up" data-video>
+      <div class="intro-hero" data-video>
         <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
           <source src="assets/video/gasirim.mp4" type="video/mp4">
           비디오를 재생할 수 없는 환경입니다.
@@ -43,7 +43,6 @@
                 <path d="M8 5v14l10-7z" fill="currentColor" />
               </svg>
             </span>
-            <span class="intro-video__toggle-text">일시 정지</span>
           </button>
         </div>
       </div>
