--- a/소개.html
+++ b/소개.html
@@ -218,35 +218,44 @@
       <!-- 둘러 보기 -->
       <section id="둘러보기" class="tab-panel" role="tabpanel" tabindex="0" hidden>
         <div class="gallery-cards reveal parallax from-up">
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
-            <article class="card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
-            </article>
+          <article class="card"><img src="assets/img/gallery/pic1.jpg" alt="갤러리 이미지 1" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic2.jpg" alt="갤러리 이미지 2" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic3.jpg" alt="갤러리 이미지 3" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic4.jpg" alt="갤러리 이미지 4" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic5.jpg" alt="갤러리 이미지 5" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic6.jpg" alt="갤러리 이미지 6" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic7.jpg" alt="갤러리 이미지 7" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic8.jpg" alt="갤러리 이미지 8" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic9.jpg" alt="갤러리 이미지 9" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic10.jpg" alt="갤러리 이미지 10" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic11.jpg" alt="갤러리 이미지 11" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic12.jpg" alt="갤러리 이미지 12" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic13.jpg" alt="갤러리 이미지 13" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic14.jpg" alt="갤러리 이미지 14" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic15.jpg" alt="갤러리 이미지 15" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic16.jpg" alt="갤러리 이미지 16" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic17.jpg" alt="갤러리 이미지 17" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic18.jpg" alt="갤러리 이미지 18" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic19.jpg" alt="갤러리 이미지 19" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic20.jpg" alt="갤러리 이미지 20" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic21.jpg" alt="갤러리 이미지 21" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic22.jpg" alt="갤러리 이미지 22" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic23.jpg" alt="갤러리 이미지 23" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic24.jpg" alt="갤러리 이미지 24" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic25.jpg" alt="갤러리 이미지 25" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic26.jpg" alt="갤러리 이미지 26" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic27.jpg" alt="갤러리 이미지 27" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic28.jpg" alt="갤러리 이미지 28" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic29.jpg" alt="갤러리 이미지 29" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic30.jpg" alt="갤러리 이미지 30" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic31.jpg" alt="갤러리 이미지 31" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic32.jpg" alt="갤러리 이미지 32" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic33.jpg" alt="갤러리 이미지 33" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic34.jpg" alt="갤러리 이미지 34" class="card-img" /></article>
+          <article class="card"><img src="assets/img/gallery/pic35.jpg" alt="갤러리 이미지 35" class="card-img" /></article>
         </div>
       </section>
+
       <!-- Space card modal -->
       <div id="space-modal" class="space-modal" hidden>
         <div class="space-modal-content" role="dialog" aria-modal="true">
