--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,7 @@
         <div class="shop-overview__inner">
           <p class="shop-overview__eyebrow">Shop</p>
           <h2 class="shop-overview__title" id="shop-heading">가시림의 자연을 닮은 오브제로 공간을 채우다</h2>
-          <p class="shop-overview__description">가시림의 자연을 담은 여러 상품 들을 만나보세요. 가시림의 동백꽃으로 블렌딩한 가시림 시그니쳐 티 (茶) 부터, 이끼 화분, 고사리 화분, 희귀 종자들까지 - 작은 아이템들로 일상의 시간을 특별하게 채워보세요.</p>
+          <p class="shop-overview__description">가시림의 자연을 담은 여러 상품 들을 만나보세요. 가시림의 동백꽃으로 블렌딩한 가시림 시그니쳐 티 (茶) 부터, 이끼 화분, 고사리 화분, 희귀 종자들까지. 작은 아이템들로 일상의 시간을 특별하게 채워보세요.</p>
         </div>
       </section>
 
@@ -87,33 +87,10 @@
             </figure>
             <div class="product-card__copy">
               <h3 class="product-card__title">상품 준비 중</h3>
-              <p class="product-card__description">동백과 허브 블렌딩 티를 새롭게 선보일 예정입니다.</p>
+              <p class="product-card__description">가시림 블렌딩 티를 새롭게 선보일 예정입니다.</p>
               <p class="product-card__price">가격 미정</p>
             </div>
           </div>
-
-          <div class="product-card" data-category="gardening">
-            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
-              <span>상품 준비 중</span>
-            </figure>
-            <div class="product-card__copy">
-              <h3 class="product-card__title">상품 준비 중</h3>
-              <p class="product-card__description">새로운 워크숍 키트를 정성껏 준비하고 있습니다.</p>
-              <p class="product-card__price">가격 미정</p>
-            </div>
-          </div>
-
-          <div class="product-card" data-category="tea">
-            <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
-              <span>상품 준비 중</span>
-            </figure>
-            <div class="product-card__copy">
-              <h3 class="product-card__title">상품 준비 중</h3>
-              <p class="product-card__description">공간을 채울 향 제품을 준비 중입니다. 조금만 기다려 주세요.</p>
-              <p class="product-card__price">가격 미정</p>
-            </div>
-          </div>
-        </div>
       </section>
     </main>
 
