--- a/방문.html
+++ b/방문.html
@@ -24,7 +24,7 @@
   <div class="page">
 
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="방문 안내" data-hero-image="assets/img/pageheader/visit-page.jpg"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="방문 안내" data-hero-image="assets/img/pageheader/visit-page.jpg" data-hero-alt="가시림 방문 안내 헤더 이미지"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="visit-main" aria-labelledby="visit-heading">
