--- a/프로그램소개.html
+++ b/프로그램소개.html
@@ -171,5 +171,6 @@
   <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
   <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
   <script src="assets/js/main.js" defer></script>
+  <script src="assets/js/program-modal.js" defer></script>
 </body>
 </html>
