Improve navigation UI and fix visit page issues

--- a/방문.html
+++ b/방문.html
@@ -204,7 +204,7 @@
         <div class="visit-map__layout">
           <figure class="visit-map__frame">
             <div class="visit-map__badge">3266 가시리</div>
-            <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.384523347821!2d126.74911287548557!3d33.36102587342499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d05ab91c5e7d3%3A0xd9b9442adb7e6c06!2sGasirim!5e0!3m2!1sen!2sus!4v1759572278539!5m2!1sen!2sus"</iframe>
+            <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.384523347821!2d126.74911287548557!3d33.36102587342499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d05ab91c5e7d3%3A0xd9b9442adb7e6c06!2sGasirim!5e0!3m2!1sen!2sus!4v1759572278539!5m2!1sen!2sus"></iframe>
           </figure>
           <aside class="visit-map__details">
             <h3 class="visit-map__title">제주특별자치도 서귀포시 표선면 가시리 3266</h3>
