--- a/프로그램목록.html
+++ b/프로그램목록.html
@@ -203,7 +203,7 @@
 
       <!-- 원예 -->
       <section id="원예" class="tab-panel" role="tabpanel" tabindex="0" hidden>
-        <div class="program-catalog" aria-label="가시림 원예 프로그램 목록"></div>
+        <div class="program-catalog" aria-label="가시림 원예 프로그램 목록">
           <div class="program-grid">
             <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="horticulture-lab">
               <figure class="program-card__media">
@@ -264,6 +264,5 @@
   <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/program-tabs.js" defer></script>
-  <script src="assets/js/program-modal.js" defer></script>
 </body>
 </html>
