--- a/방문.html
+++ b/방문.html
@@ -35,24 +35,24 @@
           <h1 id="visit-heading" class="visit-overview__title">방문 안내</h1>
         </div>
         <nav class="visit-overview__tags" aria-label="방문 안내 섹션">
-          <a class="visit-tag" href="#visit-location">위치 및 운영</a>
-          <a class="visit-tag" href="#visit-tickets">이용 요금</a>
+          <a class="visit-tag" href="#운영시간">운영 시간</a>
+          <a class="visit-tag" href="#이용요금">이용 요금</a>
           <a class="visit-tag" href="#visit-guides">방문 전 알아두기</a>
-          <a class="visit-tag" href="#visit-amenities">편의 시설</a>
-          <a class="visit-tag" href="#visit-directions">오시는 길</a>
-          <a class="visit-tag" href="#visit-contact">문의</a>
+          <a class="visit-tag" href="#편의시설">편의 시설</a>
+          <a class="visit-tag" href="#오시는길">오시는 길</a>
+          <a class="visit-tag" href="#문의">문의</a>
         </nav>
       </section>
 
-      <section id="visit-location" class="visit-section visit-section--location" aria-labelledby="section-location">
+      <section id="운영시간" class="visit-section visit-section--운영시간" aria-labelledby="section-운영시간">
         <div class="visit-section__header">
           <span class="visit-section__label">Locations &amp; Hours</span>
-          <h2 id="section-location" class="visit-section__title">위치 및 운영 안내</h2>
+          <h2 id="section-운영시간" class="visit-section__title">위치 및 운영 안내</h2>
         </div>
-        <div class="visit-location__grid">
-          <figure class="visit-location__image">
+        <div class="운영시간__grid">
+          <figure class="운영시간__image">
             <img src="assets/img/ticketoffice.jpg" alt="가시림 매표소 앞 사진" loading="lazy" />
-            <figcaption class="visit-location__caption">가시림 입구 및 매표소</figcaption>
+            <figcaption class="운영시간__caption">가시림 입구 및 매표소</figcaption>
           </figure>
           <article class="visit-hours-card" aria-label="운영 정보">
             <dl class="visit-hours-list">
@@ -77,12 +77,12 @@
         </div>
       </section>
 
-      <section id="visit-tickets" class="visit-section visit-section--tickets" aria-labelledby="section-tickets">
+      <section id="이용요금" class="visit-section visit-section--이용요금" aria-labelledby="section-이용요금">
         <div class="visit-section__header">
           <span class="visit-section__label">Tickets</span>
-          <h2 id="section-tickets" class="visit-section__title">이용 요금</h2>
+          <h2 id="section-이용요금" class="visit-section__title">이용 요금</h2>
         </div>
-        <div class="visit-rate-table" role="region" aria-labelledby="section-tickets">
+        <div class="visit-rate-table" role="region" aria-labelledby="section-이용요금">
           <table class="rate-table">
             <caption class="sr-only">가시림 수목원 이용 요금표</caption>
             <thead>
@@ -144,7 +144,7 @@
           <details class="visit-guideline">
             <summary>촬영 및 대관</summary>
             <div class="visit-guideline__body">
-              <p>스냅 촬영, 방송 촬영 등 상업 목적 촬영은 허가가 필요합니다. 일정과 목적을 <a href="#visit-contact">문의 채널</a>로 보내주시면 담당자가 확인 후 회신드립니다.</p>
+              <p>스냅 촬영, 방송 촬영 등 상업 목적 촬영은 허가가 필요합니다. 일정과 목적을 <a href="#문의">문의 채널</a>로 보내주시면 담당자가 확인 후 회신드립니다.</p>
             </div>
           </details>
           <details class="visit-guideline">
@@ -156,10 +156,10 @@
         </div>
       </section>
 
-      <section id="visit-amenities" class="visit-section visit-section--amenities" aria-labelledby="section-amenities">
+      <section id="편의시설" class="visit-section visit-section--편의시설" aria-labelledby="section-편의시설">
         <div class="visit-section__header">
           <span class="visit-section__label">Amenities</span>
-          <h2 id="section-amenities" class="visit-section__title">편의 시설</h2>
+          <h2 id="section-편의시설" class="visit-section__title">편의 시설</h2>
         </div>
         <ul class="amenity-list">
           <li class="amenity-list__item">
@@ -195,7 +195,7 @@
         </ul>
       </section>
 
-      <section id="visit-directions" class="visit-section visit-section--map" aria-labelledby="section-directions">
+      <section id="오시는길" class="visit-section visit-section--map" aria-labelledby="section-directions">
         <div class="visit-section__header">
           <span class="visit-section__label">Directions</span>
           <h2 id="section-directions" class="visit-section__title">오시는 길</h2>
@@ -204,20 +204,20 @@
         <div class="visit-map__layout">
           <figure class="visit-map__frame">
             <div class="visit-map__badge">3266 가시리</div>
-            <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.384523347821!2d126.74911287548557!3d33.36102587342499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d05ab91c5e7d3%3A0xd9b9442adb7e6c06!2sGasirim!5e0!3m2!1sen!2sus!4v1759572278539!5m2!1sen!2sus"</iframe>
+            <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.384523347821!2d126.74911287548557!3d33.36102587342499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d05ab91c5e7d3%3A0xd9b9442adb7e6c06!2sGasirim!5e0!3m2!1sen!2sus!4v1759572278539!5m2!1sen!2sus"></iframe>
           </figure>
           <aside class="visit-map__details">
             <h3 class="visit-map__title">제주특별자치도 서귀포시 표선면 가시리 3266</h3>
-            <dl class="visit-directions">
-              <div class="visit-directions__row">
+            <dl class="오시는길">
+              <div class="오시는길__row">
                 <dt>자동차 (1시간) </dt>
                 <dd>제주국제공항 → 번영로 → 표선면 방면</dd>
               </div>
-              <div class="visit-directions__row">
+              <div class="오시는길__row">
                 <dt>버스 (1시간 30분) </dt>
                 <dd>제주국제공항 → 121번 혹은 120번 이용 → 표선고등학교 정류장 하차 → 732-2번 이용  → 안좌동 정류장 하차  → 도보 5분</dd>
               </div>
-              <div class="visit-directions__row">
+              <div class="오시는길__row">
                 <dt>택시 (1시간) </dt>
                 <dd>공항에서 약 35,000원 내외, 기사님께 ‘가시림 수목원’으로 말씀해 주세요.</dd>
               </div>
@@ -226,14 +226,14 @@
         </div>
       </section>
 
-      <section id="visit-contact" class="visit-section visit-section--contact" aria-labelledby="section-group">
+      <section id="문의" class="visit-section visit-section--contact" aria-labelledby="section-group">
         <div class="visit-section__header">
           <span class="visit-section__label">Contact</span>
           <h2 id="section-group" class="visit-section__title">단체 예약 및 대관 문의</h2>
           <p class="visit-section__lead">기업 워크숍, 원예 클래스, 스냅 촬영 등 목적에 맞춘 맞춤형 프로그램과 공간을 제안해 드립니다. 방문 희망일과 인원, 요청 사항과 함께 연락주세요.</p>
         </div>
 
-        <div class="visit-contact__grid">
+        <div class="visit-section__grid">
           <article class="contact-card">
             <span class="contact-card__icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" focusable="false">
