Improve mobile menu interactions and footer links

--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
         </div>
       </section>
 
-      <section class="shop-catalog" aria-label="가시림 상품 목록">
+      <section id="shop-catalog" class="shop-catalog" aria-label="가시림 상품 목록">
         <div class="shop-catalog__header">
           <div class="shop-filters" role="group" aria-label="상품 분류">
             <button type="button" class="shop-filter is-active" data-filter="all" aria-pressed="true">All</button>
