--- a/shop.html
+++ b/shop.html
@@ -40,7 +40,7 @@
         <div class="shop-catalog__header">
           <div class="shop-filters" role="group" aria-label="상품 분류">
             <button type="button" class="shop-filter is-active" data-filter="all" aria-pressed="true">All</button>
-            <button type="button" class="shop-filter" data-filter="meditation" aria-pressed="false">화분</button>
+            <button type="button" class="shop-filter" data-filter="plant_pot" aria-pressed="false">화분</button>
             <button type="button" class="shop-filter" data-filter="gardening" aria-pressed="false">종자</button>
             <button type="button" class="shop-filter" data-filter="tea" aria-pressed="false">차</button>
           </div>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="shop-grid">
-          <div class="product-card" data-category="meditation">
+          <div class="product-card" data-category="plant_pot">
             <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
               <span>상품 준비 중</span>
             </figure>
@@ -59,7 +59,7 @@
             </div>
           </div>
 
-          <div class="product-card" data-category="meditation">
+          <div class="product-card" data-category="plant_pot">
             <figure class="product-card__media product-card__media--placeholder" aria-hidden="true">
               <span>상품 준비 중</span>
             </figure>
