--- a/프로그램소개.html
+++ b/프로그램소개.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Programs | 가시림</title>
   <meta name="description" content="가시림 명상·원예 프로그램 전체 보기 — 산책 명상부터 온실 힐링, 가드닝 클래스까지 한눈에 확인하세요." />
-  <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="assets/img/logo_tree.png" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
   <link rel="preload" as="image" href="assets/img/pageheader/program-page.jpg">
