--- a/방문.html
+++ b/방문.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>방문 안내 | 가시림</title>
   <meta name="description" content="가시림 방문 안내 — 이용 요금, 오시는 길, 단체 예약 및 문의 정보를 확인하세요." />
-  <link rel="icon" href="assets/img/logo_tree.png" type="image/svg+xml">
-
+  <link rel="icon" href="assets/img/logo_tree_square.png" type="image/svg+xml">  
+  <link rel="apple-touch-icon" href="assets/img/logo_tree_square.png">  <link rel="apple-touch-icon" href="assets/img/logo_tree_square.png">
   <!-- Preload the big header background (faster perceived load) -->
   <link rel="preload" as="image" href="assets/img/pageheader/visit-page.jpg">
 
