--- a/소개.html
+++ b/소개.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>소개 | 가시림</title>
   <meta name="description" content="가시림 — 제주 민간정원, 원예·명상·예술 프로그램이 있는 치유의 정원.">
-  <link rel="icon" href="assets/img/logo_tree.png" type="image/svg+xml">
-
+  <link rel="icon" href="assets/img/logo_tree_square.png" type="image/svg+xml">  
+  <link rel="apple-touch-icon" href="assets/img/logo_tree_square.png">
   <!-- Preload the big header background (faster perceived load) -->
   <link rel="preload" as="image" href="assets/img/pageheader/intro-page.jpg">
 
