--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>가시림 | 加 時 林</title>
   <meta name="description" content="가시림 — 제주 민간정원, 원예·명상·예술 프로그램이 있는 치유의 정원.">
-  <link rel="icon" href="assets/img/logo_tree_square.png" type="image/svg+xml">  
+  <link rel="icon" href="assets/img/logo_tree_square.png" type="image/svg+xml" sizes="64x64">  
   <link rel="apple-touch-icon" href="assets/img/logo_tree_square.png">
 
   <!-- Preload the big header background (faster perceived load) -->
