--- a/index.html
+++ b/index.html
@@ -22,41 +22,38 @@
   <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body>
-  <div class="page" --page-pad="0">
+  <div class="page">
     
     <div id="landing-bar" data-include="partials/sticky-header-bar.html"></div>
     <div id="landing-header" data-include="partials/header-landing.html"></div>
 
     <!-- 가시림 소개 -->
     <section class="body-container body-container--stacked" aria-labelledby="intro-heading">
-      
-      <div class="facility-grid" grid-template-columns="65% 35%" align-item="center">
-        <!-- 홍보 영상 -->
-        <div class="intro-hero" data-video>
-          <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
-            <source src="assets/video/gasirim.mp4" type="video/mp4">
-            비디오를 재생할 수 없는 환경입니다.
-          </video>
-          <div class="intro-video__controls">
-            <button type="button" class="intro-video__toggle" data-video-toggle aria-pressed="false">
-              <span class="intro-video__toggle-icon" aria-hidden="true">
-                <svg class="icon--pause" viewBox="0 0 24 24" focusable="false">
-                  <path d="M7 4h3v16H7zM14 4h3v16h-3z" fill="currentColor" />
-                </svg>
-                <svg class="icon--play" viewBox="0 0 24 24" focusable="false">
-                  <path d="M8 5v14l10-7z" fill="currentColor" />
-                </svg>
-              </span>
-            </button>
-          </div>
-          <!-- Article 1 -->
-          <div class="article article-container reveal from-left" margin="50px">
-            <h3 class="h left">제주 4호 민간정원</h3>
-            <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>12개의 정원·숲·길</b>로 구성되어 있습니다. <b>150년</b> 이상 된 수목이 다수 존재하며, 
-                              단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다. <br>30년 동안 조경 사업에 몸담아 온 강남춘 대표는 자연이 지닌 치유의 힘을 직접 경험하며, 
-                              그 소중한 경험을 더 많은 사람들과 나누고자 하는 마음으로 가시림 수목원을 조성했습니다. 이 마음을 담아 매일 아침 수목원 곳곳을 분주히 가꿉니다.</p> 
-            <p class="p left">이러한 노력으로, 가시림은 사계절 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
-          </div>
+      <!-- Article 1 -->
+      <div class="article article-container reveal from-left">
+        <h3 class="h left">제주 4호 민간정원</h3>
+        <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>12개의 정원·숲·길</b>로 구성되어 있습니다. <b>150년</b> 이상 된 수목이 다수 존재하며, 
+                          단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다. 30년 동안 조경 사업에 몸담아 온 강남춘 대표는 자연이 지닌 치유의 힘을 직접 경험하며, 
+                          그 소중한 경험을 더 많은 사람들과 나누고자 하는 마음으로 가시림 수목원을 조성했습니다. 이 마음을 담아 매일 아침 수목원 곳곳을 분주히 가꿉니다.</p> 
+        <p class="p left">이러한 노력으로, 가시림은 사계절 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
+      </div>
+     <!-- 홍보 영상 -->
+      <div class="intro-hero" data-video>
+        <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
+          <source src="assets/video/gasirim.mp4" type="video/mp4">
+          비디오를 재생할 수 없는 환경입니다.
+        </video>
+        <div class="intro-video__controls">
+          <button type="button" class="intro-video__toggle" data-video-toggle aria-pressed="false">
+            <span class="intro-video__toggle-icon" aria-hidden="true">
+              <svg class="icon--pause" viewBox="0 0 24 24" focusable="false">
+                <path d="M7 4h3v16H7zM14 4h3v16h-3z" fill="currentColor" />
+              </svg>
+              <svg class="icon--play" viewBox="0 0 24 24" focusable="false">
+                <path d="M8 5v14l10-7z" fill="currentColor" />
+              </svg>
+            </span>
+          </button>
         </div>
       </div>
 
