--- a/index.html
+++ b/index.html
@@ -28,32 +28,35 @@
     <div id="landing-header" data-include="partials/header-landing.html"></div>
 
     <!-- 가시림 소개 -->
-    <section class="body-container body-container--stacked" aria-labelledby="intro-heading">
-      <!-- Article 1 -->
-      <div class="article article-container reveal from-left">
-        <h3 class="h left">제주 4호 민간정원</h3>
-        <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>12개의 정원·숲·길</b>로 구성되어 있습니다. <b>150년</b> 이상 된 수목이 다수 존재하며, 
-                          단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다. 30년 동안 조경 사업에 몸담아 온 강남춘 대표는 자연이 지닌 치유의 힘을 직접 경험하며, 
-                          그 소중한 경험을 더 많은 사람들과 나누고자 하는 마음으로 가시림 수목원을 조성했습니다. 이 마음을 담아 매일 아침 수목원 곳곳을 분주히 가꿉니다.</p> 
-        <p class="p left">이러한 노력으로, 가시림은 사계절 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
-      </div>
-     <!-- 홍보 영상 -->
-      <div class="intro-hero" data-video>
-        <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
-          <source src="assets/video/gasirim.mp4" type="video/mp4">
-          비디오를 재생할 수 없는 환경입니다.
-        </video>
-        <div class="intro-video__controls">
-          <button type="button" class="intro-video__toggle" data-video-toggle aria-pressed="false">
-            <span class="intro-video__toggle-icon" aria-hidden="true">
-              <svg class="icon--pause" viewBox="0 0 24 24" focusable="false">
-                <path d="M7 4h3v16H7zM14 4h3v16h-3z" fill="currentColor" />
-              </svg>
-              <svg class="icon--play" viewBox="0 0 24 24" focusable="false">
-                <path d="M8 5v14l10-7z" fill="currentColor" />
-              </svg>
-            </span>
-          </button>
+    <section class="body-container body-container--stacked body-container--intro" aria-labelledby="intro-heading">
+      <div class="intro-feature-grid">
+        <!-- 홍보 영상 -->
+        <div class="intro-hero" data-video>
+          <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
+            <source src="assets/video/gasirim.mp4" type="video/mp4">
+            비디오를 재생할 수 없는 환경입니다.
+          </video>
+          <div class="intro-video__controls">
+            <button type="button" class="intro-video__toggle" data-video-toggle aria-pressed="false">
+              <span class="intro-video__toggle-icon" aria-hidden="true">
+                <svg class="icon--pause" viewBox="0 0 24 24" focusable="false">
+                  <path d="M7 4h3v16H7zM14 4h3v16h-3z" fill="currentColor" />
+                </svg>
+                <svg class="icon--play" viewBox="0 0 24 24" focusable="false">
+                  <path d="M8 5v14l10-7z" fill="currentColor" />
+                </svg>
+              </span>
+            </button>
+          </div>
+        </div>
+        <!-- Article 1 -->
+        <div class="article article-container intro-feature-grid__article reveal from-right">
+          <h3 class="h left">제주 4호 민간정원</h3>
+          <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>12개의 정원·숲·길</b>로 구성되어 있습니다. <b>150년</b> 이상 된 수목이 다수 존재하며, 
+                            단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다. </p>
+          <p class="p left">30년 동안 조경 사업에 몸담아 온 강남춘 대표는 자연이 지닌 치유의 힘을 직접 경험하며, 
+                            그 소중한 경험을 더 많은 사람들과 나누고자 하는 마음으로 가시림 수목원을 조성했습니다. </p>
+          <p class="p left">이러한 노력으로, 가시림은 사계절 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
         </div>
       </div>
 
@@ -133,6 +136,15 @@
         <p class="p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간입니다.<br>자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 합니다.<br>궁극적으로 가시림은 <b>치유의 정원</b>을 구현하고자 합니다.</p>
       </div>
 
+      <section class="home-programs reveal from-up" aria-labelledby="home-programs-heading" data-program-list>
+        <div class="home-programs__header">
+          <p class="home-programs__eyebrow">PROGRAMS</p>
+          <h3 class="h left" id="home-programs-heading">가시림 프로그램 안내</h3>
+          <p class="p left home-programs__intro">숲, 명상, 원예 프로그램 전반을 한눈에 살펴보세요.</p>
+        </div>
+        <ul class="home-programs__list" data-program-list-target></ul>
+      </section>
+
       <figure class="intro-img-wide intro-img-wide2 reveal from-left">
         <img src="assets/img/main-cafe.jpg" alt="가시림 카페에서 바라본 곶자왈 정원" loading="lazy">
       </figure>
@@ -143,36 +155,36 @@
       </div>
 
       <div class="facility-grid">
-        <a class="facility-card" data-category="experience">
-          <figure class="product-card__media">
-            <img src="assets/img/facility/facility1.png" alt="유리온실" loading="lazy">
+        <a class="facility-card" data-category="facility" data-space-target="유리 온실" href="소개.html?space=%EC%9C%A0%EB%A6%AC%20%EC%98%A8%EC%8B%A4#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
+          <figure class="facility-card__media">
+            <img src="assets/img/facility/facility1.png" alt="유리 온실" loading="lazy">
           </figure>
-          <div class="product-card__copy">
-            <p class="product-card__title">유리 온실 (명상 스튜디오)</p>
+          <div class="facility-card__overlay">
+            <h3 class="facility-card__title">유리 온실</h3>
           </div>
         </a>
-        <a class="facility-card" data-category="experience">
-          <figure class="product-card__media">
+        <a class="facility-card" data-category="facility" data-space-target="가든센터" href="소개.html?space=%EA%B0%80%EB%93%A0%EC%84%BC%ED%84%B0#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
+          <figure class="facility-card__media">
             <img src="assets/img/facility/facility2.png" alt="가든센터" loading="lazy">
           </figure>
-          <div class="product-card__copy">
-            <p class="product-card__title">가든 센터 (식물 판매장)</p>
+          <div class="facility-card__overlay">
+            <h3 class="facility-card__title">가든센터</h3>
           </div>
         </a>
-        <a class="facility-card" data-category="experience">
-          <figure class="product-card__media">
-            <img src="assets/img/facility/facility3.png" alt="카페" loading="lazy">
+        <a class="facility-card" data-category="facility" data-space-target="플랜트 카페" href="소개.html?space=%ED%94%8C%EB%9E%9C%ED%8A%B8%20%EC%B9%B4%ED%8E%98#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
+          <figure class="facility-card__media">
+            <img src="assets/img/facility/facility3.png" alt="플랜트 카페" loading="lazy">
           </figure>
-          <div class="product-card__copy">
-            <p class="product-card__title">카페</p>
+          <div class="facility-card__overlay">
+            <h3 class="facility-card__title">플랜트 카페</h3>
           </div>
         </a>
-        <a class="facility-card" data-category="experience">
-          <figure class="product-card__media">
-            <img src="assets/img/facility/facility4.png" alt="가든센터2" loading="lazy">
+        <a class="facility-card" data-category="facility" data-space-target="마음 온실 스튜디오" href="소개.html?space=%EB%A7%88%EC%9D%8C%20%EC%98%A8%EC%8B%A4%20%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
+          <figure class="facility-card__media">
+            <img src="assets/img/facility/facility4.png" alt="마음 온실 스튜디오" loading="lazy">
           </figure>
-          <div class="product-card__copy">
-            <p class="product-card__title">가든 센터 (체험장)</p>
+          <div class="facility-card__overlay">
+            <h3 class="facility-card__title">마음 온실 스튜디오</h3>
           </div>
         </a>
       </div>
