--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="landing-header" data-include="partials/header-landing.html"></div>
 
     <!-- 가시림 소개 -->
+    <!-- Section 1-->
     <section class="body-container body-container--stacked body-container--intro" aria-labelledby="intro-heading">
       <div class="intro-feature-grid">
         <!-- 홍보 영상 -->
@@ -52,14 +53,24 @@
         <!-- Article 1 -->
         <div class="article article-container intro-feature-grid__article reveal from-right">
           <h3 class="h left">제주 4호 민간정원</h3>
-          <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>12개의 정원·숲·길</b>로 구성되어 있습니다. <b>150년</b> 이상 된 수목이 다수 존재하며, 
-                            단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다. </p>
-          <p class="p left">30년 동안 조경 사업에 몸담아 온 강남춘 대표는 자연이 지닌 치유의 힘을 직접 경험하며, 
-                            그 소중한 경험을 더 많은 사람들과 나누고자 하는 마음으로 가시림 수목원을 조성했습니다. </p>
-          <p class="p left">이러한 노력으로, 가시림은 사계절 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
+          <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했습니다. 
+          <p class="p left"><b>150년 이상 된 수목들과 제주 자생 식물들, 그리고 다양한 희귀 식물들을</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
         </div>
       </div>
 
+      <!-- Section 2 -->
+      <!-- Photo -->
+        <figure class="intro-img-wide intro-img-wide2 reveal from-left">
+          <img src="assets/img/main-cafe.jpg" alt="가시림 카페에서 바라본 곶자왈 정원" loading="lazy">
+        </figure>
+      <!-- Article 2 -->
+      <div class="article article-container intro-feature-grid__article reveal from-right">
+        <h1 class="h left">사계절의 정원</h1>
+        <p class="p left">가시림은 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다.</p>
+        <p class="p left">사계절의 변화하는 모습을 온전히 담아내고자 하는 마음으로 가꾸어진 가시림의 풍경을 즐겨보세요.</p>
+      </div>
+        
+      <!-- Photo Gallery -->
       <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리" data-gallery data-gallery-duration="120">
         <button class="intro-gallery-nav intro-gallery-nav--prev embla__prev" type="button" aria-label="이전 사진" data-gallery-prev>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor" aria-hidden="true" focusable="false">
@@ -131,60 +142,68 @@
         </button>
       </section>
 
-      <div class="article article-container reveal from-right">
-        <h3 class="h right">수목원은 어떻게 감상해야 하는가</h3>
-        <p class="p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간입니다.<br>자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 합니다.<br>궁극적으로 가시림은 <b>치유의 정원</b>을 구현하고자 합니다.</p>
+      <!-- Section 3 -->
+      <div class="intro-feature-grid" grid-template-columns="50% 50%"></div>
+      <!-- Photo -->
+        <figure class="intro-img-wide intro-img-wide2 reveal from-left">
+          <img src="assets/img/main-cafe.jpg" alt="가시림 카페에서 바라본 곶자왈 정원" loading="lazy">
+        </figure>
+        <!-- Article 3 -->
+        <div class="article article-container reveal from-right">
+          <h3 class="h right">자연이 주는 치유를 전달하다</h3>
+          <p class="p right">가시림의 강남춘 대표는 30년 동안 조경 사업에 몸담아 온 제주도 토박이입니다.</p>
+          <p class="p right">자연이 지닌 치유의 힘을 긴 세월 직접 경험해온 강 대표는 
+                            그 소중한 경험을 더 많은 사람들과 나누고자 하는 마음으로 가시림 수목원을 조성했습니다.</p>
+        </div>
+
+      <!-- Section 3 -->
+      <!-- Article 4 -->
+      <div class="article article-container reveal from-left">
+        <h1 class="h left">치유의 정원</h1>
+        <p class="p left">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간입니다. 자기 성찰과 휴식을 통해 이루어지는 치유를 전달하고자 수목원인 동시에 복합 문화 공간으로서 여러분께 다가갑니다.</p>
       </div>
 
+      <!-- Section 4: Programs -->
       <section class="home-programs reveal from-up" aria-labelledby="home-programs-heading" data-program-list>
         <div class="home-programs__header">
           <p class="home-programs__eyebrow">PROGRAMS</p>
           <h3 class="h left" id="home-programs-heading">가시림 프로그램 안내</h3>
-          <p class="p left home-programs__intro">숲, 명상, 원예 프로그램 전반을 한눈에 살펴보세요.</p>
+          <p class="p left home-programs__intro"><b>원예, 명상, 예술</b> 프로그램들을 통해 자연을 다각도로 체험할 수 있는 경험을 선사합니다. 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 가져보세요.</p>
         </div>
         <ul class="home-programs__list" data-program-list-target></ul>
       </section>
-
-      <figure class="intro-img-wide intro-img-wide2 reveal from-left">
-        <img src="assets/img/main-cafe.jpg" alt="가시림 카페에서 바라본 곶자왈 정원" loading="lazy">
-      </figure>
-
-      <div class="article article-container reveal from-up">
-        <h3 class="h left">자연을 다각도에서 체험하다</h3>
-        <p class="p left">가시림은 <b>원예, 명상, 예술</b> 프로그램을 통해 <b>자연을 다각도로 체험</b>할 수 있는 경험을 선사합니다.<br>이를 통해 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 갖게 됩니다.</p>
-      </div>
-
+      <!-- Section 5: Facilities -->
       <div class="facility-grid">
-        <a class="facility-card" data-category="facility" data-space-target="유리 온실" href="소개.html?space=%EC%9C%A0%EB%A6%AC%20%EC%98%A8%EC%8B%A4#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
-          <figure class="facility-card__media">
-            <img src="assets/img/facility/facility1.png" alt="유리 온실" loading="lazy">
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
+            <img src="assets/img/facility/facility1.png" alt="유리온실" loading="lazy">
           </figure>
-          <div class="facility-card__overlay">
-            <h3 class="facility-card__title">유리 온실</h3>
+          <div class="product-card__copy">
+            <p class="product-card__title">명상 스튜디오</p>
           </div>
         </a>
-        <a class="facility-card" data-category="facility" data-space-target="가든센터" href="소개.html?space=%EA%B0%80%EB%93%A0%EC%84%BC%ED%84%B0#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
-          <figure class="facility-card__media">
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
             <img src="assets/img/facility/facility2.png" alt="가든센터" loading="lazy">
           </figure>
-          <div class="facility-card__overlay">
-            <h3 class="facility-card__title">가든센터</h3>
+          <div class="product-card__copy">
+            <p class="product-card__title">식물 판매장</p>
           </div>
         </a>
-        <a class="facility-card" data-category="facility" data-space-target="플랜트 카페" href="소개.html?space=%ED%94%8C%EB%9E%9C%ED%8A%B8%20%EC%B9%B4%ED%8E%98#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
-          <figure class="facility-card__media">
-            <img src="assets/img/facility/facility3.png" alt="플랜트 카페" loading="lazy">
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
+            <img src="assets/img/facility/facility3.png" alt="카페" loading="lazy">
           </figure>
-          <div class="facility-card__overlay">
-            <h3 class="facility-card__title">플랜트 카페</h3>
+          <div class="product-card__copy">
+            <p class="product-card__title">카페</p>
           </div>
         </a>
-        <a class="facility-card" data-category="facility" data-space-target="마음 온실 스튜디오" href="소개.html?space=%EB%A7%88%EC%9D%8C%20%EC%98%A8%EC%8B%A4%20%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4#%EA%B3%B5%EA%B0%84%EC%86%8C%EA%B0%9C">
-          <figure class="facility-card__media">
-            <img src="assets/img/facility/facility4.png" alt="마음 온실 스튜디오" loading="lazy">
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
+            <img src="assets/img/facility/facility4.png" alt="가든센터2" loading="lazy">
           </figure>
-          <div class="facility-card__overlay">
-            <h3 class="facility-card__title">마음 온실 스튜디오</h3>
+          <div class="product-card__copy">
+            <p class="product-card__title">체험장</p>
           </div>
         </a>
       </div>
