--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
         </div>
         <!-- Article 1 -->
         <div class="article article-container intro-feature-grid__article reveal from-left">
-          <h3 class="h right">제주 4호 민간정원</h3>
-          <p class="p right">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했습니다. 
-          <p class="p right"><b>150년 이상 된 수목들과 제주 자생 식물들, 그리고 다양한 희귀 식물들을</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
+          <h3 class="h right" font-weight="400">제주 4호 민간정원</h3>
+          <p class="p right">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했습니다. 150년 이상 된 수목들과 제주 자생 식물들, 그리고 다양한 희귀 식물들을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
         </div>
       </div>
 
